--- a/package.json
+++ b/package.json
@@ -1,24 +1,43 @@
 {
   "name": "slate-docs",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "npm run update-tailwind && MINIMAL=1 CSB=1 nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "update-tailwind": "rm ./node_modules/@nuxt/content-theme-docs/src/tailwind.config.js && cp ./tailwind.config.js ./node_modules/@nuxt/content-theme-docs/src/tailwind.config.js",
-    "generate": "npm run update-tailwind && nuxt generate",
-    "deploy": "npm run generate && firebase deploy"
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@babel/preset-env": "7.12.17",
-    "@nuxt/content-theme-docs": "0.7.2",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "nuxt": "2.14.7",
-    "rehype-katex": "^5.0.0",
-    "remark-math": "^4.0.0"
+    "@docusaurus/core": "2.0.0-beta.18",
+    "@docusaurus/preset-classic": "2.0.0-beta.18",
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.1.1",
+    "prism-react-renderer": "^1.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@nuxtjs/google-analytics": "^2.4.0"
+    "@docusaurus/module-type-aliases": "2.0.0-beta.18",
+    "@tsconfig/docusaurus": "^1.0.5",
+    "typescript": "^4.6.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
