--- a/.firebaserc
+++ b/.firebaserc
@@ -6,7 +6,7 @@
     "blankly-6ada5": {
       "hosting": {
         "docs": [
-          "blankly-docs-41c21"
+          "slate-docs"
         ]
       }
     }
